# inventree-semiconductors

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg
doc/: example_digikey.json
src/inventree_semiconductors/: api.py  plugin.py
src/inventree_semiconductors/suppliers/: digikey_api.py
src/inventree_semiconductors/templates/: digikey.html
